fix overflow in posts

--- a/src/app/components/manager/child-components/post-item/post-item.component.css
+++ b/src/app/components/manager/child-components/post-item/post-item.component.css
@@ -23,6 +23,7 @@
 .collapsed {
   overflow-y: hidden;
   width: 98%;
+  height: 40px;
 }
 
 .extended {
@@ -59,7 +60,7 @@ mat-form-field {
 }
 
 .update-btn {
-  color: green;  
+  color: green;
   position: absolute;
   left: 8.5vw;
   bottom: 1.1vw;
